<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmsc355.ccnd.gymrat.GetUserInfo"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text=" Please Enter Your Profile Information:"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="28sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/profileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Profile Name"
                    android:inputType="textPersonName"
                    android:lineSpacingExtra="10sp"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" />

                <EditText
                    android:id="@+id/sexText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Sex"
                    android:inputType="textPersonName"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" />

                <EditText
                    android:id="@+id/ageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Age"
                    android:inputType="textPersonName"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" />

                <EditText
                    android:id="@+id/heightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="Height"
                    android:inputType="textPersonName"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" />

                <EditText
                    android:id="@+id/weightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Weight"
                    android:inputType="textPersonName"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" />

                <EditText
                    android:id="@+id/workoutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Favorite Workout"
                    android:inputType="textPersonName"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" />

                <Button
                    android:id="@+id/finishedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doneClick"
                    android:text="All Done!" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
