<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3961a3"
    tools:context="com.cmsc355.ccnd.gymrat.MyProfile">


    <TextView
        android:id="@+id/MyProfleHeader"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/MyProfile"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:text="Jim Rat"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/Weight"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/MyProfleHeader"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/Height"
        android:layout_width="162dp"
        android:layout_height="35dp"
        android:layout_marginTop="130dp"
        android:text="Height: 5'11&quot;"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/Weight"
        android:layout_width="162dp"
        android:layout_height="0dp"
        android:text="Weight: 150lbs"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Height"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Height"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:text="21 Years Old"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/Height"
        app:layout_constraintRight_toRightOf="@+id/Height"
        app:layout_constraintTop_toBottomOf="@+id/Height"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/Gender"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="33dp"
        android:text="Male"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/Weight"
        app:layout_constraintRight_toRightOf="@+id/Weight"
        app:layout_constraintTop_toBottomOf="@+id/Weight"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/FavoriteWorkout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:text="Favorite Workout: Running"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/Age"
        app:layout_constraintRight_toRightOf="@+id/Age"
        app:layout_constraintTop_toBottomOf="@+id/Age"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="52dp"
        android:onClick="logoutClick"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/EditInfo"
        tools:layout_constraintBottom_creator="1" />

    <Button
        android:id="@+id/EditInfo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="editClick"
        android:text="Edit Info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/GymRatPic"
        android:layout_width="149dp"
        android:layout_height="165dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FavoriteWorkout"
        app:layout_constraintTop_toBottomOf="@+id/Gender"
        app:srcCompat="@drawable/gymrat_big" />

</android.support.constraint.ConstraintLayout>
